--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=favicon.ico><title>hdp_fuwu</title><link href=asset/css/about.e2b4a60e.css rel=prefetch><link href=asset/css/chunk-0d768325.dc7c4b6a.css rel=prefetch><link href=asset/css/chunk-0fb92674.f9c7529e.css rel=prefetch><link href=asset/css/chunk-29ce3548.4be21357.css rel=prefetch><link href=asset/css/chunk-3dac87de.f9c7529e.css rel=prefetch><link href=asset/css/chunk-756141e4.4f0ad985.css rel=prefetch><link href=asset/css/chunk-7590f146.aee02e3d.css rel=prefetch><link href=asset/css/chunk-c01f4268.f9c7529e.css rel=prefetch><link href=asset/js/about.d530b03e.js rel=prefetch><link href=asset/js/chunk-0d768325.edd3a3f6.js rel=prefetch><link href=asset/js/chunk-0fb92674.23c6279b.js rel=prefetch><link href=asset/js/chunk-29ce3548.5b47bb96.js rel=prefetch><link href=asset/js/chunk-2d0aaba7.7b4dacd7.js rel=prefetch><link href=asset/js/chunk-3dac87de.66b8101e.js rel=prefetch><link href=asset/js/chunk-756141e4.1f148f2b.js rel=prefetch><link href=asset/js/chunk-7590f146.3cd15d8b.js rel=prefetch><link href=asset/js/chunk-c01f4268.27c94707.js rel=prefetch><link href=asset/css/app.5d9519dd.css rel=preload as=style><link href=asset/css/chunk-vendors.e0cdbbce.css rel=preload as=style><link href=asset/js/app.589c473b.js rel=preload as=script><link href=asset/js/chunk-vendors.86ac40ed.js rel=preload as=script><link href=asset/css/chunk-vendors.e0cdbbce.css rel=stylesheet><link href=asset/css/app.5d9519dd.css rel=stylesheet></head><body><noscript><strong>We're sorry but hdp_fuwu doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=asset/js/chunk-vendors.86ac40ed.js></script><script src=asset/js/app.589c473b.js></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="icon" href="favicon.ico">
+    <title>hdp_fuwu</title>
+  <link href="0.js" rel="prefetch"><link href="1.js" rel="prefetch"><link href="2.js" rel="prefetch"><link href="3.js" rel="prefetch"><link href="4.js" rel="prefetch"><link href="5.js" rel="prefetch"><link href="6.js" rel="prefetch"><link href="7.js" rel="prefetch"><link href="about.js" rel="prefetch"><link href="app.js" rel="preload" as="script"></head>
+  <body>
+    <noscript>
+      <strong>We're sorry but hdp_fuwu doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+    </noscript>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
+  <script type="text/javascript" src="app.js"></script></body>
+</html>
